plugins {
	id 'org.springframework.boot' version '2.4.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "6.0.6"
}

group = 'ee.ituk'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springBootAdminVersion', "2.1.5")
	set('mapstructVersion', "1.4.2.Final")
	set('swaggerVersion', "3.0.0")
	set('caffeineVersion', '3.0.1')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.springframework.session:spring-session-core'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	implementation "io.springfox:springfox-boot-starter:${swaggerVersion}"
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	implementation 'net.sargue:mailgun:1.9.0'
	implementation 'org.apache.velocity:velocity:1.7'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.glassfish.jersey.inject:jersey-hk2:2.29.1'
	implementation 'commons-validator:commons-validator:1.6'
	implementation 'org.zalando:logbook-spring-boot-starter:1.11.0'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.mapstruct.extensions.spring:mapstruct-spring-annotations:0.0.2'
	implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.2.0'
	implementation 'javax.cache:cache-api'
	implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
	implementation "com.github.ben-manes.caffeine:jcache:${caffeineVersion}"

	// ====== TEST =======

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine'
	testImplementation 'org.junit.jupiter:junit-jupiter-params'
	testImplementation 'org.testcontainers:postgresql:1.15.1'
}

test {
	useJUnitPlatform()
	maxHeapSize = '1G'
}

dependencyManagement {
	imports {
		mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
	}
}
